--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+=== 2.23.1 ===
+
+2008-06-02  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* NEWS:
+	* configure.in:
+	Version 2.23.1
+
 2008-05-25  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* yelp.desktop.in.in:
