Updated Arabic Translation by Djihed Afifi.
svn path=/trunk/; revision=3144

--- a/po/ar.po
+++ b/po/ar.po
@@ -753,7 +753,7 @@ msgstr "مُنَظِّم التتابع"
 
 #: ../data/toc.xml.in.h:120
 msgid "Settings"
-msgstr "التعيينات"
+msgstr "الإعدادات"
 
 #: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
