--- a/po/oc.po
+++ b/po/oc.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-06-09 15:22+0200\n"
+"POT-Creation-Date: 2008-07-02 09:01+0200\n"
 "PO-Revision-Date: 2008-06-11 11:48+0200\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../data/info.xml.in.h:1
 msgid "GNU Info Pages"
@@ -849,7 +849,7 @@ msgstr "Visionaira"
 
 #: ../data/toc.xml.in.h:147
 msgid "Web Browser"
-msgstr "Navegaire web"
+msgstr "Navigaire web"
 
 #: ../data/toc.xml.in.h:148
 msgid "Web Development"
@@ -857,7 +857,7 @@ msgstr "Desvolopament web"
 
 #: ../data/toc.xml.in.h:149
 msgid "Welcome to the GNOME Help Browser"
-msgstr "Planvengut dins lo navegaire d'ajuda de GNOME"
+msgstr "Planvengut dins lo navigaire d'ajuda de GNOME"
 
 #: ../data/toc.xml.in.h:150
 msgid "Word Processors"
@@ -877,7 +877,7 @@ msgstr "Apondre un favorit"
 
 #: ../data/ui/yelp.glade.h:4
 msgid "Bookmarks"
-msgstr "Favorits"
+msgstr "Marca-paginas"
 
 #: ../data/ui/yelp.glade.h:5
 msgid "C_ase sensitive"
@@ -1097,7 +1097,7 @@ msgstr "Definís lo repertòri d'escondedor d'utilizar"
 #. Commandline parsing is done here
 #: ../src/yelp-main.c:357
 msgid " GNOME Help Browser"
-msgstr " Navegador d'ajuda GNOME"
+msgstr " Navigador d'ajuda GNOME"
 
 #: ../src/yelp-main.c:377 ../yelp.desktop.in.in.h:2
 msgid "Help"
@@ -1421,7 +1421,7 @@ msgstr "Copiar l'adreça _electronica"
 
 #: ../src/yelp-window.c:501
 msgid "Help Browser"
-msgstr "Navegador d'ajuda"
+msgstr "Navigador d'ajuda"
 
 #: ../src/yelp-window.c:592 ../src/yelp-window.c:644 ../src/yelp-window.c:1700
 msgid "Loading..."
@@ -1497,9 +1497,8 @@ msgstr "Yelp"
 
 #: ../src/yelp-window.c:2485
 msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr "Un navegador e legidor de documentacion pel burèu GNOME."
+msgstr "Un navigador e legidor de documentacion pel burèu GNOME."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Obténer d'ajuda amb GNOME"
-
