Add support for copy and select all
* src/yelp-html.cpp:
Add support for copy and select all

svn path=/branches/webkit/; revision=3153

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-11  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-html.cpp:
+	Add support for copy and select all
+
 2008-07-09  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* configure.in:
