Terminology improvements by Vladimir Melo.
2008-07-21  Leonardo Ferreira Fontenelle  <leonardof@gnome.org>

	* pt_BR.po: Terminology improvements by Vladimir Melo.

svn path=/trunk/; revision=3159

--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-08 09:00-0300\n"
-"PO-Revision-Date: 2008-02-08 08:59-0300\n"
-"Last-Translator: Jonh Wendell <wendell@bani.com.br>\n"
+"PO-Revision-Date: 2008-07-21 23:56-0300\n"
+"Last-Translator: Vladimir Melo <vladimirmelo.psi@gmail.com>\n"
 "Language-Team: Portuguese/Brazil <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,7 +31,7 @@ msgstr "Ajuda tradicional da linha de comando (info)"
 
 #: ../data/man.xml.in.h:1
 msgid "Applications"
-msgstr "Aplicações"
+msgstr "Aplicativos"
 
 #: ../data/man.xml.in.h:2
 msgid "BLT Functions"
@@ -75,7 +75,7 @@ msgstr "Funções de Som de Áudio em Rede"
 
 #: ../data/man.xml.in.h:12
 msgid "OpenSSL Applications"
-msgstr "Aplicações OpenSSL"
+msgstr "Aplicativos OpenSSL"
 
 #: ../data/man.xml.in.h:13
 msgid "OpenSSL Configuration"
@@ -255,7 +255,7 @@ msgstr "Funções TIFF"
 
 #: ../data/man.xml.in.h:57
 msgid "Termcap Applications"
-msgstr "Aplicações Termcap"
+msgstr "Aplicativos Termcap"
 
 #: ../data/man.xml.in.h:58
 msgid "Traditional command line help (man)"
@@ -263,7 +263,7 @@ msgstr "Ajuda tradicional da linha de comando (man)"
 
 #: ../data/man.xml.in.h:59
 msgid "X11 Applications"
-msgstr "Aplicações X11"
+msgstr "Aplicativos X11"
 
 #: ../data/man.xml.in.h:60
 msgid "X11 Configuration"
@@ -311,15 +311,15 @@ msgstr "Entretenimento"
 
 #: ../data/toc.xml.in.h:7
 msgid "Applications for viewing and manipulating graphics"
-msgstr "Aplicações para manipulação ou visualização de gráficos"
+msgstr "Aplicativos para manipulação ou visualização de gráficos"
 
 #: ../data/toc.xml.in.h:8
 msgid "Applications related to audio and video"
-msgstr "Aplicações relacionadas a som e vídeo"
+msgstr "Aplicativos relacionados a som e vídeo"
 
 #: ../data/toc.xml.in.h:9
 msgid "Applications that teach or aid in learning"
-msgstr "Aplicações relacionadas ao ensino"
+msgstr "Aplicativos relacionados ao ensino"
 
 #: ../data/toc.xml.in.h:10
 msgid "Arcade Games"
@@ -488,7 +488,7 @@ msgstr "Ferramentas Gráficas "
 
 #: ../data/toc.xml.in.h:53
 msgid "GNOME Applications"
-msgstr "Aplicações GNOME"
+msgstr "Aplicativos GNOME"
 
 #: ../data/toc.xml.in.h:54
 msgid "GTK"
@@ -500,11 +500,11 @@ msgstr "Construtores de Interface Gráfica"
 
 #: ../data/toc.xml.in.h:57
 msgid "Generic applications for the GNOME environment"
-msgstr "Aplicações genéricas para o ambiente GNOME"
+msgstr "Aplicativos genéricos para o ambiente GNOME"
 
 #: ../data/toc.xml.in.h:58
 msgid "Generic applications for the KDE environment"
-msgstr "Aplicações genéricas para o ambiente KDE"
+msgstr "Aplicativos genéricos para o ambiente KDE"
 
 #: ../data/toc.xml.in.h:59
 msgid "Geography"
@@ -524,7 +524,7 @@ msgstr "Gráficos"
 
 #: ../data/toc.xml.in.h:63
 msgid "Guides and manuals for applications that connect to the outside world"
-msgstr "Guias e manuais para aplicações que se conectam ao mundo exterior"
+msgstr "Guias e manuais para aplicativos que se conectam ao mundo exterior"
 
 #: ../data/toc.xml.in.h:64
 msgid "Guides for getting involved in development"
@@ -572,7 +572,7 @@ msgstr "Java"
 
 #: ../data/toc.xml.in.h:75
 msgid "KDE Applications"
-msgstr "Aplicações KDE"
+msgstr "Aplicativos KDE"
 
 #: ../data/toc.xml.in.h:76
 msgid "Kids Games"
@@ -644,11 +644,11 @@ msgstr "OCR"
 
 #: ../data/toc.xml.in.h:92
 msgid "Office Applications"
-msgstr "Aplicações de Escritório"
+msgstr "Aplicativos de escritório"
 
 #: ../data/toc.xml.in.h:93
 msgid "Office applications"
-msgstr "Aplicações de escritório"
+msgstr "Aplicativos de escritório"
 
 #: ../data/toc.xml.in.h:94
 msgid "Other Documentation"
@@ -1451,7 +1451,7 @@ msgstr "_Copiar endereço do vínculo"
 
 #: ../src/yelp-window.c:444
 msgid "Help On this application"
-msgstr "Ajuda sobre esta aplicação"
+msgstr "Ajuda sobre este aplicativo"
 
 #: ../src/yelp-window.c:447
 msgid "_About"
@@ -1545,7 +1545,7 @@ msgstr "Yelp"
 
 #: ../src/yelp-window.c:2458
 msgid "A documentation browser and viewer for the Gnome Desktop."
-msgstr "Um navegador e vizualizador de documentação para o ambiente GNOME."
+msgstr "Um navegador e visualizador de documentação para o ambiente GNOME."
 
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
