--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-28  Philipp Kerling  <k.philipp@gmail.com>
+
+	* de.po: Fixed German translation errors pointed out by Nicolas	Kaiser.
+
 2008-07-22  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian Translation.
