--- a/po/de.po
+++ b/po/de.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: Yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-03-07 17:41+0100\n"
-"PO-Revision-Date: 2008-02-19 19:14+0100\n"
-"Last-Translator: Jochen Skulj <jochen@jochenskulj.de>\n"
+"PO-Revision-Date: 2008-07-28 18:04+0200\n"
+"Last-Translator: Philipp Kerling <k.philipp@gmail.com>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -840,7 +840,7 @@ msgstr "Werkzeuge zur Erledigung Ihrer Arbeiten"
 
 #: ../data/toc.xml.in.h:142
 msgid "Vector Graphics"
-msgstr "Vectorgrafik"
+msgstr "Vektorgrafik"
 
 #: ../data/toc.xml.in.h:143
 msgid "Video"
@@ -970,7 +970,7 @@ msgstr "Schrift für Buchstaben mit variabler Breite"
 #: ../data/yelp.schemas.in.h:5
 msgid "Use a keyboard-controllable caret when viewing pages."
 msgstr ""
-"Einen über die Tastatur kontrolliebaren Rahmen verwenden, wenn Seiten "
+"Einen über die Tastatur kontrollierbaren Rahmen verwenden, wenn Seiten "
 "betrachtet werden."
 
 #: ../data/yelp.schemas.in.h:6
