--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-29  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Djihed Afifi.
+
 2008-07-28  Philipp Kerling  <k.philipp@gmail.com>
 
 	* de.po: Fixed German translation errors pointed out by Nicolas	Kaiser.
