--- a/po/oc.po
+++ b/po/oc.po
@@ -9,13 +9,13 @@ msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-07-02 09:01+0200\n"
-"PO-Revision-Date: 2008-06-11 11:48+0200\n"
+"PO-Revision-Date: 2008-08-06 02:41+0200\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);"
 
 #: ../data/info.xml.in.h:1
 msgid "GNU Info Pages"
@@ -556,7 +556,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:72
 msgid "Instant Messaging"
-msgstr ""
+msgstr "Messatjariá instantanèa"
 
 #: ../data/toc.xml.in.h:73
 msgid "Internet"
@@ -634,7 +634,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:91
 msgid "OCR"
-msgstr ""
+msgstr "OCR"
 
 #: ../data/toc.xml.in.h:92
 msgid "Office Applications"
@@ -658,7 +658,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:97
 msgid "Package Manager"
-msgstr ""
+msgstr "Gestinari de paquetatges"
 
 #: ../data/toc.xml.in.h:98
 msgid "Parallel Computing"
@@ -840,7 +840,7 @@ msgstr "Vidèo"
 
 #: ../data/toc.xml.in.h:144
 msgid "Video Conference"
-msgstr ""
+msgstr "Conferéncia vidèo"
 
 #. Translators: This is a menu title for graphics viewing applications
 #: ../data/toc.xml.in.h:146
@@ -1128,7 +1128,7 @@ msgstr "L'estampaira %s gerís pas l'estampatge PostScript."
 
 #: ../src/yelp-print.c:366
 msgid "Waiting to print"
-msgstr ""
+msgstr "En espèra d'estampatge"
 
 #: ../src/yelp-print.c:578
 msgid "An error occurred while printing"
@@ -1502,3 +1502,4 @@ msgstr "Un navigador e legidor de documentacion pel burèu GNOME."
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Obténer d'ajuda amb GNOME"
+
