--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-08-20  Manoj Kumar Giri <mgiri@redhat.com>
+
+	* or.po: Updated Oriya Translations
+
 2008-08-12  Yair Hershkovitz  <yairhr@gmail.com>
 
 	* he.po: Updated Hebrew translation.
