--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-21  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	* NEWS:
+	- Version 2.23.2
+
 2008-08-12  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-window.c (window_error):
