--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+Changed in 2.23.2:
+------------------
+* Fix string vulnerability [#546364] - Christian Persch
+* Use "help-browser" icon instead of deprecated "gnome-help" - Luca Ferretti
+* Updated translations:
+  ar    (Djihed Afifi)
+  de    (Jochen Skulj)
+  gu    (Ankit Patel)
+  he    (Yair Hershkovitz)
+  ks    (Rakesh Pandit)
+  oc    (Yannig Marchegay)
+  or    (Manoj Kumar Giri)
+  pt_BR (John Wendell)
+  sq    (Laurent Dhima)
+
 Changed in 2.23.1:
 ------------------
 * Add support for Gecko 1.9 (XULRunner) - Christian Persch
