--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-08-21  Vincent Untz  <vuntz@gnome.org>
+
+	* configure.in: post-release bump to 2.23.91.
+
+==================== 2.23.2 ====================
+
 2008-08-21  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
