--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-08-14  J.H.M. Dassen (Ray)  <jdassen@debian.org>
+
+	* src/yelp-info-parser.c (yelp_info_parser_parse_file):
+	Allocate iter through g_slice_alloc0 instead of g_malloc0.
+	iter is wrapped in a hash table and later freed by gtk_tree_iter_free,
+	which uses g_slice_free.
+	bug #520266, "Crash when viewing glibc manual".
+	Analysis by Matthias Clasen.
+
 2008-08-21  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: post-release bump to 2.23.91.
