--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
+== 2.23.91 ==
+	
 2008-09-01  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* NEWS:
+	Version 2.23.91
 
 	* src/yelp-utils.c (resolve_full_file):
 	Make text files actually work (i.e. open external vewing program)
