--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Changed in 2.23.91:
+-------------------
+
+* Fix loading of text files - bug #549986 (Josselin Mouette)
+* Fix glibc info manual chrash - bug #520266 (Matthias Clasen and J.H.M. Dassen)
+* Updated translations:
+  eu (Inaki Larranaga Murgoitio)
+  * Conversion from sr@Latn to sr@latin (Goran Rakic)
+
 Changed in 2.23.2:
 ------------------
 * Fix string vulnerability [#546364] - Christian Persch
