--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2008-09-09  Robert Sedak  <robert.sedak@sk.t-com.hr>
 
 	* hr.po: Updated Croatian translation.
