Add workaround for Gecko 1.9 accessibility issue bug #545162 - Ginn Chen
* src/yelp-html.cpp:
Add workaround for Gecko 1.9 accessibility issue
bug #545162 - Ginn Chen

svn path=/trunk/; revision=3191

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-11  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-html.cpp:
+	Add workaround for Gecko 1.9 accessibility issue
+	bug #545162 - Ginn Chen
+
 == 2.23.91 ==
 	
 2008-09-01  Don Scorgie  <dscorgie@svn.gnome.org>
