--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-12  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation.
+
 2008-09-12  Goran Rakić  <grakic@devbase.net>
 
         * sr.po, sr@latin.po: Updated Serbian translation (by Miloš Popović).
