Updated Serbian translation
svn path=/trunk/; revision=3196

--- a/po/sr.po
+++ b/po/sr.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-12 11:53+0200\n"
+"POT-Creation-Date: 2008-09-14 17:29+0200\n"
 "PO-Revision-Date: 2007-09-10 21:51+0200\n"
 "Last-Translator: Данило Шеган <danilo@gnome.org>\n"
 "Language-Team: Serbian (sr) <gnom@prevod.org>\n"
@@ -349,9 +349,8 @@ msgstr "Биологија"
 
 # Не долази ми тренутно :)
 #: ../data/toc.xml.in.h:16
-#, fuzzy
 msgid "Blocks Games"
-msgstr "Игре са коцкама"
+msgstr "Игре коцкама"
 
 #: ../data/toc.xml.in.h:17
 msgid "Board Games"
@@ -402,12 +401,10 @@ msgid "Construction"
 msgstr "Изградња"
 
 #: ../data/toc.xml.in.h:29
-#, fuzzy
 msgid "Contact Management"
 msgstr "Управљање контактима"
 
 #: ../data/toc.xml.in.h:30
-#, fuzzy
 msgid "Data Visualization"
 msgstr "Представљање података"
 
@@ -490,7 +487,6 @@ msgstr "Финансијски алати"
 
 # Може овако?
 #: ../data/toc.xml.in.h:52
-#, fuzzy
 msgid "Flow Charting Tools"
 msgstr "Графици протока"
 
@@ -523,9 +519,8 @@ msgid "Geology"
 msgstr "Геологија"
 
 #: ../data/toc.xml.in.h:61
-#, fuzzy
 msgid "Geoscience"
-msgstr "Наука о земљи"
+msgstr "Наука о Земљи"
 
 #: ../data/toc.xml.in.h:62
 msgid "Graphics"
@@ -541,7 +536,7 @@ msgstr "Упутства за узимање учешћа у развоју"
 
 #: ../data/toc.xml.in.h:65
 msgid "Ham Radio"
-msgstr ""
+msgstr "Аматерски радио"
 
 #: ../data/toc.xml.in.h:66
 msgid "Hardware Settings"
@@ -633,7 +628,6 @@ msgid "Monitor"
 msgstr "Монитор"
 
 #: ../data/toc.xml.in.h:87
-#, fuzzy
 msgid "Motif"
 msgstr "Мотиф"
 
@@ -705,7 +699,7 @@ msgstr "Штампање"
 
 #: ../data/toc.xml.in.h:105
 msgid "Profiling Tools"
-msgstr ""
+msgstr "Профајлер алатке"
 
 #: ../data/toc.xml.in.h:106
 msgid "Project Management Tools"
@@ -737,13 +731,12 @@ msgid "Revision Control"
 msgstr "Контрола издања"
 
 #: ../data/toc.xml.in.h:114
-#, fuzzy
 msgid "Robotics"
-msgstr "Аутоматизација"
+msgstr "Роботика"
 
 #: ../data/toc.xml.in.h:115
 msgid "Role Playing Games"
-msgstr ""
+msgstr "Фантазијске игре улога"
 
 #: ../data/toc.xml.in.h:116
 msgid "Scanning"
@@ -758,7 +751,6 @@ msgid "Security"
 msgstr "Безбедност"
 
 #: ../data/toc.xml.in.h:119
-#, fuzzy
 msgid "Sequencers"
 msgstr "Секвенцери"
 
