--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-09-12 11:53+0200\n"
+"POT-Creation-Date: 2008-09-14 17:29+0200\n"
 "PO-Revision-Date: 2007-09-10 21:51+0200\n"
 "Last-Translator: Danilo Šegan <danilo@gnome.org>\n"
 "Language-Team: Serbian (sr) <gnom@prevod.org>\n"
@@ -349,9 +349,8 @@ msgstr "Biologija"
 
 # Ne dolazi mi trenutno :)
 #: ../data/toc.xml.in.h:16
-#, fuzzy
 msgid "Blocks Games"
-msgstr "Igre sa kockama"
+msgstr "Igre kockama"
 
 #: ../data/toc.xml.in.h:17
 msgid "Board Games"
@@ -402,12 +401,10 @@ msgid "Construction"
 msgstr "Izgradnja"
 
 #: ../data/toc.xml.in.h:29
-#, fuzzy
 msgid "Contact Management"
 msgstr "Upravljanje kontaktima"
 
 #: ../data/toc.xml.in.h:30
-#, fuzzy
 msgid "Data Visualization"
 msgstr "Predstavljanje podataka"
 
@@ -490,7 +487,6 @@ msgstr "Finansijski alati"
 
 # Može ovako?
 #: ../data/toc.xml.in.h:52
-#, fuzzy
 msgid "Flow Charting Tools"
 msgstr "Grafici protoka"
 
@@ -523,9 +519,8 @@ msgid "Geology"
 msgstr "Geologija"
 
 #: ../data/toc.xml.in.h:61
-#, fuzzy
 msgid "Geoscience"
-msgstr "Nauka o zemlji"
+msgstr "Nauka o Zemlji"
 
 #: ../data/toc.xml.in.h:62
 msgid "Graphics"
@@ -541,7 +536,7 @@ msgstr "Uputstva za uzimanje učešća u razvoju"
 
 #: ../data/toc.xml.in.h:65
 msgid "Ham Radio"
-msgstr ""
+msgstr "Amaterski radio"
 
 #: ../data/toc.xml.in.h:66
 msgid "Hardware Settings"
@@ -633,7 +628,6 @@ msgid "Monitor"
 msgstr "Monitor"
 
 #: ../data/toc.xml.in.h:87
-#, fuzzy
 msgid "Motif"
 msgstr "Motif"
 
@@ -705,7 +699,7 @@ msgstr "Štampanje"
 
 #: ../data/toc.xml.in.h:105
 msgid "Profiling Tools"
-msgstr ""
+msgstr "Profajler alatke"
 
 #: ../data/toc.xml.in.h:106
 msgid "Project Management Tools"
@@ -737,13 +731,12 @@ msgid "Revision Control"
 msgstr "Kontrola izdanja"
 
 #: ../data/toc.xml.in.h:114
-#, fuzzy
 msgid "Robotics"
-msgstr "Automatizacija"
+msgstr "Robotika"
 
 #: ../data/toc.xml.in.h:115
 msgid "Role Playing Games"
-msgstr ""
+msgstr "Fantazijske igre uloga"
 
 #: ../data/toc.xml.in.h:116
 msgid "Scanning"
@@ -758,7 +751,6 @@ msgid "Security"
 msgstr "Bezbednost"
 
 #: ../data/toc.xml.in.h:119
-#, fuzzy
 msgid "Sequencers"
 msgstr "Sekvenceri"
 
