--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-15  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Khaled Hosny.
+
 2008-09-14  Goran Rakić  <grakic@devbase.net>
 
         * sr.po, sr@latin.po: Updated Serbian translation.
