Improved a11y under gecko 1.9 - Yet more work on bug #545162 from Ginn
* src/yelp-html.cpp:
Improved a11y under gecko 1.9
- Yet more work on bug #545162 from Ginn Chen

svn path=/trunk/; revision=3198

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-09-15  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* src/yelp-html.cpp:
+	Improved a11y under gecko 1.9
+	- Yet more work on bug #545162 from Ginn Chen
+
 2008-09-11  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-html.cpp:
