Add yelp to the "Documentation" fd.o category part of bug #552128
* yelp.desktop.in.in:
Add yelp to the "Documentation" fd.o category
part of bug #552128

svn path=/trunk/; revision=3200

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-09-15  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* yelp.desktop.in.in:
+	Add yelp to the "Documentation" fd.o category
+	part of bug #552128
+
+2008-09-15  Don Scorgie  <dscorgie@svn.gnome.org>
+
 	* src/yelp-document.c (request_idle_final):
 	Fix potential crasher on multi-core machines
 	bug #551757 -  Joe Marcus Clarke
