--- a/po/hu.po
+++ b/po/hu.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-03-12 03:00+0000\n"
-"PO-Revision-Date: 2008-03-16 15:48+0100\n"
+"POT-Creation-Date: 2008-03-16 14:50+0000\n"
+"PO-Revision-Date: 2008-09-19 04:11+0200\n"
 "Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <gnome@fsf.hu>\n"
 "MIME-Version: 1.0\n"
@@ -419,7 +419,7 @@ msgstr "Hibakeresők"
 
 #: ../data/toc.xml.in.h:33
 msgid "Desktop"
-msgstr "Munkaasztal"
+msgstr "Asztal"
 
 #: ../data/toc.xml.in.h:34
 msgid "Desktop Settings"
@@ -1324,11 +1324,11 @@ msgstr "Új _ablak"
 
 #: ../src/yelp-window.c:316
 msgid "Print This Document ..."
-msgstr "Ezen dokumentum nyomtatása..."
+msgstr "Ezen dokumentum nyomtatása…"
 
 #: ../src/yelp-window.c:321
 msgid "Print This Page ..."
-msgstr "Ezen oldal nyomtatása..."
+msgstr "Ezen oldal nyomtatása…"
 
 #: ../src/yelp-window.c:326
 msgid "About This Document"
@@ -1352,7 +1352,7 @@ msgstr "Min_dent kijelöl"
 
 #: ../src/yelp-window.c:353
 msgid "_Find..."
-msgstr "_Keresés..."
+msgstr "_Keresés…"
 
 #: ../src/yelp-window.c:358
 msgid "Find Pre_vious"
@@ -1420,7 +1420,7 @@ msgstr "Könyvjelző hozzá_adása"
 
 #: ../src/yelp-window.c:421
 msgid "_Edit Bookmarks..."
-msgstr "Könyvjelzők s_zerkesztése..."
+msgstr "Könyvjelzők s_zerkesztése…"
 
 #: ../src/yelp-window.c:427
 msgid "_Open Link"
@@ -1452,7 +1452,7 @@ msgstr "Súgóböngésző"
 
 #: ../src/yelp-window.c:592 ../src/yelp-window.c:644 ../src/yelp-window.c:1684
 msgid "Loading..."
-msgstr "Betöltés..."
+msgstr "Betöltés…"
 
 #: ../src/yelp-window.c:593 ../src/yelp-window.c:645
 msgid "Unknown Page"
