--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-09-21  Mugurel Tudor  <mugurelu@gnome.ro>
+
+	* ro.po: Updated Romanian translation by
+	Mişu Moldovan <dumol@gnome.ro>
+
 2008-09-19  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
