--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-09-21 Shankar Prasad  <svenkate@redhat.com>
+
+        * kn.po: Updated Kannada Translation
+
 2008-09-21  Mugurel Tudor  <mugurelu@gnome.ro>
 
 	* ro.po: Updated Romanian translation by
