--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+== 2.24.0 ==
+
+2008-09-22  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* NEWS: 
+	* configure.in:
+	Version 2.24.0
+
 2008-09-15  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* yelp.desktop.in.in:
