--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,28 @@
+Changed in 2.24.0:
+------------------
+
+*Improve a11y under gecko 1.9 
+ - Bug #545162
+ - Huge thanks to Ginn Chen, Willie Walker and Joanmarie Diggs
+* Fix potential race-condition
+ - bug #551757 (Joe Marcus Clarke)
+* fd.o categorisation improvements
+ - bug #552128
+* Updated translations:
+  ar (Djihed Afifi)
+  bn_IN (Runa Bhattacharjee)
+  he (Yair Hershkovitz)
+  hi (Rajesh Ranjan)
+  hr (Robert Sedak)
+  hu (Gabor Kelemen)
+  kn (Shankar Prasad)
+  pt (Duarte Loreto)
+  pt_BR (Vladimir Melo)
+  ro (Mişu Moldovan)
+  sr (Goran Rakić)
+  sr@latin (Goran Rakić)
+  th (Theppitak Karoonboonyanan)
+
 Changed in 2.23.91:
 -------------------
 
