--- a/po/et.po
+++ b/po/et.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-01-14 07:58+0000\n"
-"PO-Revision-Date: 2008-03-21 10:20+0200\n"
+"PO-Revision-Date: 2008-10-07 21:30+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -987,7 +987,7 @@ msgstr "Ava järjehoidja uues aknas"
 
 #: ../src/yelp-bookmarks.c:154
 msgid "Rename Bookmark"
-msgstr "Nimeta järjehoidja ümber"
+msgstr "Muuda järjehoidja nime"
 
 #: ../src/yelp-bookmarks.c:158
 msgid "Remove Bookmark"
