--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-12-19  Pema Geyleg  <pema.geyleg@gmail.com>
+
+        * dz.po: Updated Dzongkha Translation
+
 2008-05-19  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
