--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-03  Nurali Abdurahmonov  <mavnur@gmail.com>
+
+        * uz@cyrillic.po: added Uzbek translation by Nurali.
+        * uz.po: added Uzbek translation by Nurali.
+        * LINGUAS: added uz and uz@cyrillic.
+
 2008-11-14  Thomas Thurman  <tthurman@gnome.org>
 
         * la.po: added Latin translation by Rafael Garcia.
