Updated Korean translation
svn path=/trunk/; revision=3215

--- a/po/ko.po
+++ b/po/ko.po
@@ -1,6 +1,7 @@
 # yelp ko.po
+#
 # Young-Ho, Cha <ganadist@chollian.net>, 2002, 2005, 2007.
-# Changwoo Ryu <cwryu@debian.org>, 2004, 2005, 2006, 2007, 2008.
+# Changwoo Ryu <cwryu@debian.org>, 2004, 2005, 2006, 2007, 2008, 2009.
 #
 # 새로 번역하신 분은 아래 "translator-credits"에 추가하세요.
 #
@@ -9,7 +10,7 @@ msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-18 01:49+0900\n"
-"PO-Revision-Date: 2008-02-18 01:58+0900\n"
+"PO-Revision-Date: 2009-01-29 21:38+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: GNOME Korea <gnome-kr-hackers@lists.kldp.net>\n"
 "MIME-Version: 1.0\n"
@@ -985,7 +986,7 @@ msgstr "책갈피 이름 바꾸기"
 
 #: ../src/yelp-bookmarks.c:158
 msgid "Remove Bookmark"
-msgstr "책갈피 지우기"
+msgstr "책갈피 제거"
 
 #: ../src/yelp-bookmarks.c:315
 #, c-format
@@ -1094,7 +1095,7 @@ msgstr "개인 세션을 엽니다"
 
 #: ../src/yelp-main.c:101
 msgid "Define which cache directory to use"
-msgstr "사용할 캐쉬 디렉토리를 정의합니다"
+msgstr "사용할 캐쉬 디렉터리를 정의합니다"
 
 #. Commandline parsing is done here
 #: ../src/yelp-main.c:358
