--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-01-29  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2009-01-03  Nurali Abdurahmonov  <mavnur@gmail.com>
 
         * uz@cyrillic.po: added Uzbek translation by Nurali.
