--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-02-28 Og Maciel <ogmaciel@gnome.org>
+
+	* it.po: Updated Italian translation by Milo Casagrande.
+
 2009-02-16  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
