--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-03-02  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	* NEWS:
+	- Version 2.25.1
+
 2009-03-01  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in:
