--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,24 @@
+Changes in 2.25.1:
+------------------
+* RTL fixes, bug #573159, Shaun McCance
+* Fixed libxul[-embedding] detection, Christian Persch
+* Removed deprecated GTK symbols, bug #571868, Thomas H.P. Andersen
+* Fixed crasher, bug #552947, Antonio Litterio
+* Fixed loading of local HTML files, bug #562137, Josselin Mouette
+* Updated translations:
+  ar          (Khaled Hosny)
+  ast         (Mikel González)
+  et          (Ivar Smolin)
+  it          (Milo Casagrande)
+  ko          (Changwoo Ryu)
+  la          (Rafael Garcia)
+  ps          (Zabeeh Khan)
+  sv          (Daniel Nylander)
+  uz          (Nurali Abdurahmonov)
+  uz@cyrillic (Nurali Abdurahmonov)
+  zh_HK       (Chao-Hsiung Liao)
+  zh_TW       (Chao-Hsiung Liao)
+
 Changed in 2.24.0:
 ------------------
 
