updated hebrew translation
svn path=/trunk/; revision=3230

--- a/po/he.po
+++ b/po/he.po
@@ -11,15 +11,16 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD.he\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-08-12 15:20+0000\n"
-"PO-Revision-Date: 2005-07-31 15:56+0300\n"
-"Last-Translator: Yair Hershkovitz <yairhr@gmail.com>\n"
+"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
+"product=yelp&component=general\n"
+"POT-Creation-Date: 2009-03-02 06:19+0000\n"
+"PO-Revision-Date: 2009-03-07 17:05+0200\n"
+"Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: ../data/info.xml.in.h:1
 msgid "GNU Info Pages"
@@ -207,35 +208,35 @@ msgstr "חלק 9"
 
 #: ../data/man.xml.in.h:45
 msgid "Sections 1, 1p, 1g and 1t"
-msgstr "חלקים 1, 1p, 1g ו-1t"
+msgstr "חלקים 1, 1p, 1g ו־1t"
 
 #: ../data/man.xml.in.h:46
 msgid "Sections 3, 3o, and 3t"
-msgstr "חלקים 3, 3o, ו-3t"
+msgstr "חלקים 3, 3o, ו־3t"
 
 #: ../data/man.xml.in.h:47
 msgid "Sections 3form and 3menu"
-msgstr "חלקים 3form ו-3menu"
+msgstr "חלקים 3form ו־3menu"
 
 #: ../data/man.xml.in.h:48
 msgid "Sections 3ncurses and 3curses"
-msgstr "חלקים 3ncurses ו-3curses"
+msgstr "חלקים 3ncurses ו־3curses"
 
 #: ../data/man.xml.in.h:49
 msgid "Sections 3pm and 3perl"
-msgstr "חלקים 3pm ו-3perl"
+msgstr "חלקים 3pm ו־3perl"
 
 #: ../data/man.xml.in.h:50
 msgid "Sections 3x and 3X11"
-msgstr "חלקים 3x ו-3X11"
+msgstr "חלקים 3x ו־3X11"
 
 #: ../data/man.xml.in.h:51
 msgid "Sections 7 and 7gcc"
-msgstr "חלקים 7 ו-7gcc"
+msgstr "חלקים 7 ו־7gcc"
 
 #: ../data/man.xml.in.h:52
 msgid "Sections 8 and 8l"
-msgstr "חלקים 8 ו-8l"
+msgstr "חלקים 8 ו־8l"
 
 #: ../data/man.xml.in.h:53
 msgid "System Administration"
@@ -403,7 +404,7 @@ msgstr "ניהול אנשי קשר"
 
 #: ../data/toc.xml.in.h:30
 msgid "Data Visualization"
-msgstr ""
+msgstr "הצגה חזותית של נתונים"
 
 #: ../data/toc.xml.in.h:31
 msgid "Databases"
@@ -516,7 +517,7 @@ msgstr "גאולוגיה"
 
 #: ../data/toc.xml.in.h:61
 msgid "Geoscience"
-msgstr "גיאו-מדע"
+msgstr "גאו־מדע"
 
 #: ../data/toc.xml.in.h:62
 msgid "Graphics"
@@ -582,7 +583,7 @@ msgstr "משחקי ילדים"
 msgid ""
 "Learn more about making your system more accessible for a range of "
 "disabilities"
-msgstr ""
+msgstr "למד עוד אודות הפיכת המערכת שלך לנגישה יותר עבור שלל לקויות"
 
 #: ../data/toc.xml.in.h:78
 msgid "Licenses"
@@ -606,7 +607,7 @@ msgstr "תוכנה רפואית"
 
 #: ../data/toc.xml.in.h:83
 msgid "Midi"
-msgstr ""
+msgstr "Midi"
 
 #: ../data/toc.xml.in.h:84
 msgid "Miscellaneous Documentation"
@@ -622,7 +623,7 @@ msgstr "צג"
 
 #: ../data/toc.xml.in.h:87
 msgid "Motif"
-msgstr ""
+msgstr "Motif"
 
 #: ../data/toc.xml.in.h:88
 msgid "Music"
@@ -658,7 +659,7 @@ msgstr "P2P"
 
 #: ../data/toc.xml.in.h:96
 msgid "PDA Communication"
-msgstr ""
+msgstr "תקשורת עם מחשבי כף־יד"
 
 #: ../data/toc.xml.in.h:97
 msgid "Package Manager"
@@ -691,7 +692,7 @@ msgstr "מדפיס"
 
 #: ../data/toc.xml.in.h:105
 msgid "Profiling Tools"
-msgstr ""
+msgstr "כלי בניית פרופיל"
 
 #: ../data/toc.xml.in.h:106
 msgid "Project Management Tools"
@@ -744,7 +745,7 @@ msgstr "אבטחה"
 
 #: ../data/toc.xml.in.h:119
 msgid "Sequencers"
-msgstr ""
+msgstr "בוני רצף"
 
 #: ../data/toc.xml.in.h:120
 msgid "Settings"
@@ -753,6 +754,7 @@ msgstr "הגדרות"
 #: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
 msgstr ""
+"הגדרות שמשתמשים יכולים לשנות כדי להפוך את סביבת העבודה שלהם לנעימה יותר"
 
 #: ../data/toc.xml.in.h:122
 msgid "Simulation Games"
@@ -1081,8 +1083,7 @@ msgstr "אין מידע זמין אודות שגיאה זו."
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed because it is not a well-formed info page."
-msgstr ""
-"הקובץ ’%s’ לא ניתן לפירוק מכיון שאינו דף מידע תקין."
+msgstr "הקובץ ’%s’ לא ניתן לפירוק מכיון שאינו דף מידע תקין."
 
 #: ../src/yelp-io-channel.c:132
 #, c-format
@@ -1112,8 +1113,7 @@ msgstr "עזרה"
 #, c-format
 msgid ""
 "The file ‘%s’ could not be parsed because it is not a well-formed man page."
-msgstr ""
-"הקובץ ’%s’ לא ניתן לפירוק מכיון שאינו דף תיעוד תקין."
+msgstr "הקובץ ’%s’ לא ניתן לפירוק מכיון שאינו דף תיעוד תקין."
 
 #: ../src/yelp-print.c:97
 msgid "Print"
@@ -1173,7 +1173,7 @@ msgstr "תוצאות חיפוש עבור \"%s\""
 #: ../src/yelp-search-parser.c:303
 #, c-format
 msgid "Repeat the search online at %s"
-msgstr "חזור על החיפוש כמקוון ב-%s"
+msgstr "חזור על החיפוש כמקוון ב־%s"
 
 #. Translators: Do not translate this list exactly.  These are
 #. * colon-separated words that aren't useful for choosing search
@@ -1238,17 +1238,17 @@ msgstr "מעבד החיפוש החזיר תוצאות לא תקינות"
 #: ../src/yelp-toc.c:267
 #, c-format
 msgid "The page %s was not found in the TOC."
-msgstr "העמוד %s לא נמצא ב-TOC."
+msgstr "העמוד %s לא נמצא בטבלת התכנים."
 
 #: ../src/yelp-toc.c:366
 msgid "The requested page was not found in the TOC."
-msgstr "הדף המבוקש לא נמצא ב-TOC."
+msgstr "הדף המבוקש לא נמצא בטבלת התכנים."
 
 #: ../src/yelp-toc.c:438
 msgid ""
 "The TOC file could not be parsed because it is not a well-formed XML "
 "document."
-msgstr "קובץ ה-TOC לא ניתן לעיבוד מכיון שאינו קובץ XML תקני."
+msgstr "קובץ טבלת התכנים לא ניתן לעיבוד מכיוון שאינו קובץ XML תקני."
 
 #: ../src/yelp-transform.c:80
 msgid "Invalid Stylesheet"
@@ -1257,8 +1257,7 @@ msgstr "גליון סגנון שגוי"
 #: ../src/yelp-transform.c:81
 #, c-format
 msgid "The XSLT stylesheet ‘%s’ is either missing, or it is not valid."
-msgstr ""
-"גליון סגנון ה-XSLT‏ ’%s’ חסר או שאינו תקין."
+msgstr "גליון סגנון ה־XSLT‏ ’%s’ חסר או שאינו תקין."
 
 #: ../src/yelp-transform.c:112
 msgid "Broken Transformation"
@@ -1266,8 +1265,7 @@ msgstr "המרה שבורה"
 
 #: ../src/yelp-transform.c:113
 msgid "An unknown error occurred while attempting to transform the document."
-msgstr ""
-"שגיאה לא ידועה התרחשה במהלך המרת המסמך."
+msgstr "שגיאה לא ידועה התרחשה במהלך המרת המסמך."
 
 #: ../src/yelp-transform.c:373
 msgid "No href attribute found on yelp:document\n"
@@ -1500,7 +1498,7 @@ msgstr ""
 "גיל אשר <dolfin@rpg.org.il>\n"
 "יובל טנאי\n"
 "יאיר הרשקוביץ <yairhr@gmail.com>\n"
-"\n"
+"Yaron Shahrabani <sh.yaron@gmail.com>\n"
 "פרוייקט תרגום GNOME לעברית:\n"
 "‏http://gnome-il.berlios.de"
 
