--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-08  Yair Hershkovitz  <yairhr@gmail.com>
+
+	* he.po: Updated Hebrew translation by Yaron Sharabani.
+
 2009-02-28 Og Maciel <ogmaciel@gnome.org>
 
 	* it.po: Updated Italian translation by Milo Casagrande.
