--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-11  Krishnababu K  <kkrothap@redhat.com>
+
+	* te.po: Updated Telugu Translation.
+
 2009-03-08  Yair Hershkovitz  <yairhr@gmail.com>
 
 	* he.po: Updated Hebrew translation by Yaron Sharabani.
