--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-14  Rajesh Ranjan <rranjan@redhat.com>
+
+	* hi.po: Updated Hindi Translation.
+
 2009-03-14  Amitakhya Phukan <amitakhya@svn.gnome.org>
 
 	* as.po: Updated Assamese translations.
