--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-03-16  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	* NEWS:
+	- Version 2.26.0
+
 2009-03-08  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-man-parser.c:
