--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Changes in 2.26.0:
+------------------
+* Don't assume order of certain man macros, bug #568066 (Andy Owen)
+* Fixed locking issue, bug #568058 (Andy Owen)
+* Updated translations:
+  mai     (Rajesh Ranjan)
+  hi      (Rajesh Ranjan)
+  as      (Amitakhya Phukan)
+  ml      (Ani Peter)
+  te      (Krishnababu K)
+  he      (Yair Hershkovitz)
+
 Changes in 2.25.1:
 ------------------
 * RTL fixes, bug #573159, Shaun McCance
