--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-03-17  Ignacio Casal Quinteiro  <icq@gnome.org>
+
+	 * gl.po: Updated Galician translation by Suso Baleato.
+
 2009-03-15  Rajesh Ranjan  <rajeshkajha@yahoo.com>
 
 	* mai.po: added Maithili translation.
