Updated Greek translation (yelp) by alefteris
svn path=/trunk/; revision=3243

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2009-04-5  Nikos Charonitakis <nikosx@gmail.com>
+
+	* el.po: Updated Greek translation by alefteris.
+
 2009-03-30  Shankar Prasad  <svenkate@redhat.com>
 
         * kn.po: Updated Kannada translations.
