- Removing old files
* src/info2html/Makefile.am:
* src/info2html/html.c:
* src/info2html/html.h:
* src/info2html/main.c:
* src/info2html/utils.c:
* src/info2html/utils.h:
* src/man2html/Makefile.am:
* src/man2html/README:
* src/test-pager.c:
* src/yelp-db-pager.c:
* src/yelp-db-pager.h:
* src/yelp-db-print-pager.c:
* src/yelp-db-print-pager.h:
* src/yelp-info-pager.c:
* src/yelp-info-pager.h:
* src/yelp-man-pager.c:
* src/yelp-man-pager.h:
* src/yelp-pager.c:
* src/yelp-pager.h:
* src/yelp-search-pager.c:
* src/yelp-search-pager.h:
* src/yelp-toc-pager.c:
* src/yelp-toc-pager.h:
* src/yelp-xslt-pager.c:
* src/yelp-xslt-pager.h:
- Removing old files

svn path=/trunk/; revision=3245

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,32 @@
+2009-04-08  Shaun McCance  <shaunm@gnome.org>
+
+	* src/info2html/Makefile.am:
+	* src/info2html/html.c:
+	* src/info2html/html.h:
+	* src/info2html/main.c:
+	* src/info2html/utils.c:
+	* src/info2html/utils.h:
+	* src/man2html/Makefile.am:
+	* src/man2html/README:
+	* src/test-pager.c:
+	* src/yelp-db-pager.c:
+	* src/yelp-db-pager.h:
+	* src/yelp-db-print-pager.c:
+	* src/yelp-db-print-pager.h:
+	* src/yelp-info-pager.c:
+	* src/yelp-info-pager.h:
+	* src/yelp-man-pager.c:
+	* src/yelp-man-pager.h:
+	* src/yelp-pager.c:
+	* src/yelp-pager.h:
+	* src/yelp-search-pager.c:
+	* src/yelp-search-pager.h:
+	* src/yelp-toc-pager.c:
+	* src/yelp-toc-pager.h:
+	* src/yelp-xslt-pager.c:
+	* src/yelp-xslt-pager.h:
+	- Removing old files
+
 2009-04-08  Pedro Fragoso  <ember@ubuntu.com>
 
 	* src/gtkentryaction.c:
