--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,7 @@
 	* data/ui/yelp-open-location.ui (added):
 	* data/ui/yelp-preferences.ui (added):
 	Port from glade to GtkBuilder
+	(Thomas Andersen - bug #579894)
 	
 2009-04-27  Don Scorgie  <dscorgie@svn.gnome.org>
 
