Convert gnome-config usage to GKeyFile Based on patch from Filipp Ivanov

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-04-29  Don Scorgie  <dscorgie@src.gnome.org>
+
+	* src/yelp-bookmarks.c: 
+	* src/yelp-window.c: 
+	Convert gnome-config useage to GKeyFile
+	Bug #570731 based on the patch from
+	Filipp Ivanov
+
 2009-04-29  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* src/yelp-utils.c: 
