* src/yelp-window.c: Fix spurious frees when using right-click menu

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2009-04-30  Don Scorgie  <dscorgie@src.gnome.org>
 
+	* src/yelp-window.c: 
+	Fix spurious frees when using right-click menu
+
+2009-04-30  Don Scorgie  <dscorgie@src.gnome.org>
+
 	* src/yelp-info-parser.c: 
 	* stylesheets/info2html: 
 	Add support for displaying images in info
