--- a/po/es.po
+++ b/po/es.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
 "POT-Creation-Date: 2009-04-18 06:50+0000\n"
-"PO-Revision-Date: 2009-05-03 13:03+0200\n"
+"PO-Revision-Date: 2009-05-03 16:47+0200\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1366,7 +1366,7 @@ msgstr "Prefere_ncias"
 
 #: ../src/yelp-window.c:373
 msgid "_Reload"
-msgstr "_Recargar"
+msgstr "Re_cargar"
 
 #: ../src/yelp-window.c:385
 msgid "_Back"
