--- a/po/es.po
+++ b/po/es.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=yelp&component=general\n"
 "POT-Creation-Date: 2009-05-01 18:05+0000\n"
-"PO-Revision-Date: 2009-05-02 15:00+0200\n"
+"PO-Revision-Date: 2009-05-03 16:46+0200\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -1366,11 +1366,11 @@ msgstr "Prefere_ncias"
 
 #: ../src/yelp-window.c:373
 msgid "_Reload"
-msgstr "_Recargar"
+msgstr "Re_cargar"
 
 #: ../src/yelp-window.c:385
 msgid "_Back"
-msgstr "_Atrás"
+msgstr "A_trás"
 
 #: ../src/yelp-window.c:387
 msgid "Show previous page in history"
@@ -1386,7 +1386,7 @@ msgstr "Muestra la siguiente página del historial"
 
 #: ../src/yelp-window.c:395
 msgid "_Help Topics"
-msgstr "_Temas de ayuda"
+msgstr "Temas de ay_uda"
 
 #: ../src/yelp-window.c:397
 msgid "Go to the listing of help topics"
@@ -1430,7 +1430,7 @@ msgstr "Ayuda acerca de esta aplicación"
 
 #: ../src/yelp-window.c:447
 msgid "_About"
-msgstr "A_cerca de"
+msgstr "Acerca _de"
 
 #: ../src/yelp-window.c:452
 msgid "Copy _Email Address"
