--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Changes in 2.27.1:
+------------------
+* Added experimental support for Mallard
+* Fixed various color theme issues
+
 Changes in 2.26.0:
 ------------------
 * Don't assume order of certain man macros, bug #568066 (Andy Owen)
