--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,13 @@
+Changes in 2.27.2:
+------------------
+* Require Mallard-enabled gnome-doc-utils
+* Fixed various memory management bugs
+* Updated translations:
+  es      (Jorge Gonzalez)
+  pa      (A S Alam)
+  et      (Ivar Smolin)
+  sv      (Daniel Nylander)
+
 Changes in 2.27.1:
 ------------------
 * Added experimental support for Mallard
